tests/ui/feature-gates/feature-gate-reborrow-coerce-shared.stderr
error[E0658]: use of unstable library feature `reborrow`
  --> $DIR/feature-gate-reborrow-coerce-shared.rs:1:5
   |
LL | use std::ops::CoerceShared;
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #145612 <https://github.com/rust-lang/rust/issues/145612> for more information
   = help: add `#![feature(reborrow)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
