tests/ui/feature-gates/feature-gate-reborrow-coerce-shared.rs
use std::ops::CoerceShared; //~ ERROR  use of unstable library feature `reborrow`

fn main() {}
